# graph-rag-blueprint

./: .coverage.code-mb16.64859.XsShhEix  .env.example  .gitignore  AGENTS.md  DEMO_INSTRUCTIONS.md  LICENSE  Makefile  README.md  TECHNICAL_NOTE.md  main.py  pyproject.toml  test_invalid.json  test_long.json  uv-requirements.txt
.github/workflows/: ci.yml
data/: sample_answers.json  sample_questions.json
data/source_data/: 2024-01-22_en.md  2024-12-12_en.md  2024-12-15_en.md  2025-01-05_en.md  2025-01-06_en.md  2025-01-12_en.md  2025-01-19_en.md  2025-01-21_en.md  2025-01-23_en.md  2025-01-26_en.md  2025-01-29_en.md  2025-02-02_en.md  2025-02-09_en.md  2025-02-20_en.md  2025-03-02_en.md  2025-03-08_en.md  2025-03-09_en.md  2025-03-16_en.md  2025-03-17_en.md  2025-03-23_en.md  2025-04-06_en.md  2025-04-09_en.md  2025-04-13_en.md  2025-04-19_en.md  2025-04-20_en.md  2025-04-21_en.md  2025-04-27_en.md  2025-04-28_en.md  2025-05-01_en.md  2025-05-04_en.md  2025-05-11_en.md  2025-05-15_en.md  2025-05-20_en.md  2025-05-25_en.md  2025-06-01_en.md  2025-06-08_en.md  2025-06-15_en.md  2025-06-22_en.md  2025-06-29_en.md  2025-06-30_en.md  (+16 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEMO_GUIDE.md  DOCUMENTATION.md  EXPLAINABILITY.md  MANUAL_EXECUTION_GUIDE.md  PIPELINE_DIAGRAMS.md  QUICK_REFERENCE.md  README.md  SOURCE_DATA_INGESTION_IMPLEMENTATION.md  objective.md  plan.md
scripts/: benchmark_performance.py  evaluate.py  generate_test_questions.py  run_demo.py  validate_graph.py
tests/: conftest.py  test_end_to_end.py  test_output_format.py
(+55 files in other folders)
